# sequifier-archive

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: infer.yaml  preprocess.yaml  train-on-preprocessed.yaml  train.yaml
configs/infer/: default.yaml
configs/preprocess/: default.yaml
configs/train/: default-on-preprocessed.yaml  default.yaml
dev/: commands.txt  notes.txt
documentation/demos/: benchmark-multiple-columns.ipynb  benchmark-multitarget.ipynb  benchmark-small-data.ipynb
documentation/demos/configs/: infer.yaml  train.yaml
documentation/example_inputs/: preprocessing_input.csv  training_input.csv
notebooks/: experiment.ipynb
src/sequifier/: export.py  helpers.py  infer.py  preprocess.py  sequifier.py  train.py
src/sequifier/config/: infer_config.py  preprocess_config.py  train_config.py
tests/configs/: infer-test-categorical-multitarget.yaml  infer-test-categorical.yaml  infer-test-real-autoregression.yaml  infer-test-real.yaml  infer-test.yaml  preprocess-test-3.yaml  preprocess-test-5.yaml  preprocess-test-categorical-multitarget.yaml  preprocess-test-categorical.yaml  preprocess-test-real.yaml  preprocess-test.yaml  train-test-categorical-multitarget.yaml  train-test-categorical.yaml  train-test-real.yaml  train-test.yaml
tests/configs/infer/: test.yaml
tests/configs/train/: test.yaml
tests/integration/: conftest.py  test_inference.py  test_preprocessing.py  test_training.py
tests/resources/: test-data-categorical-1.csv  test-data-real-1-split1-autoregression.csv  test-data-real-5.csv  test_data.csv  test_data_categorical_5.csv  test_data_real_1-split2-autoregression.csv  test_data_real_1.csv  test_data_real_3.csv
