[tool.poetry]
name = "sequifier"
version = "0.2.8"
authors = ["Leon Luithlen <leontimnaluithlen@gmail.com>"]
description = "Train a transformer model with the command line"
keywords = ["transformer", "sequence classification", "machine learning", "sequence", "sequence modelling", "nlp", "language", "language modelling", "torch", "pytorch"]
readme = "README.md"
license = "BSD 3-Clause"
homepage = "https://github.com/0xideas/sequifier"
repository = "https://github.com/0xideas/sequifier"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "3.9.12"
pandas = "1.5.2"
numpy = "1.23.5"
torch = "^1.9.0"
onnxruntime = "1.12.1"
pyyaml = "5.3.1"
pydantic = "1.10.2"
poetry = "1.3.2"
pytest = "7.2.1"

[tool.poetry.scripts]
sequifier = 'sequifier.sequifier:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"