[tool.poetry]
name = "sequifier"
version = "0.3.0.8"
authors = ["Leon Luithlen <leontimnaluithlen@gmail.com>"]
description = "Train a transformer model with the command line"
keywords = ["transformer", "sequence classification", "machine learning", "sequence", "sequence modelling", "nlp", "language", "language modelling", "torch", "pytorch"]
readme = "README.md"
license = "BSD 3-Clause"
homepage = "https://github.com/0xideas/sequifier"
repository = "https://github.com/0xideas/sequifier"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
numpy = "^1.23"
torch = "^2.0"
onnx = "^1.15.0"
onnxruntime = "^1.17"
pyyaml = "^6.0"
pydantic = "1.*"
poetry = "^1.3"
pytest = "^7.2"
csvkit = "^1.0"
pyarrow = "^15.0"
fastparquet = "^2024.2.0"

[tool.poetry.scripts]
sequifier = 'sequifier.sequifier:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"